# ComfyUI_RH_OpenAPI

./: .gitignore  LICENSE  README.md  README_EN.md  SCRAPING_SUMMARY.md  __init__.py  cpu_prompt.json  models_registry.json  pyproject.toml  rh_api_scraping_results.json  rh_config.json  sync.sh
config/: .env.example
core/: api_key.py  audio.py  base.py  task.py  upload.py
developer-kit/: README.md  capabilities.md  model-registry.public.json  pricing.public.json
examples/: alibaba_wan-2_6_image-to-video-flash.json  alibaba_wan-2_6_image-to-video.json  hunyuan3d-v3_1_image-to-3d.json  hunyuan3d-v3_1_text-to-3d.json  kling-v2_5-turbo-std_image-to-video.json  kling-v2_6-pro_image-to-video.json  kling-v2_6-pro_motion-control.json  kling-video-o1-std_edit-video.json  kling-video-o1-std_refrence-to-video.json  kling-video-o1_image-to-video.json  kling-video-o1_start-to-end.json  kling-video-o1_text-to-video.json  kling-video-o3-pro_image-to-video.json  kling-video-o3-std_text-to-video.json  minimax_hailuo-02_fast.json  minimax_hailuo-02_standard.json  minimax_hailuo-2_3-fast_image-to-video.json  minimax_hailuo-2_3_i2v-standard.json  minimax_hailuo-2_3_image-to-video-pro.json  minimax_hailuo-2_3_t2v-pro.json  minimax_hailuo-2_3_t2v-standard.json  rhart-audio_text-to-audio_voice-clone.json  rhart-image-g-1_5_edit.json  rhart-image-n-pro-official_text-to-image-ultra.json  rhart-image-n-pro-official_text-to-image.json  rhart-image-n-pro_edit.json  rhart-image-n-pro_text-to-image.json  rhart-image-v1_edit.json  rhart-image-v1_text-to-image.json  rhart-video-g_text-to-video.json  (+28 more)
(+292 files in other folders)
